added metatag to google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <title>Rodrigo Rosalin</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/application.css">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-32780987-1']);
+      _gaq.push(['_setDomainName', 'neemo.com.br']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </head>
   <body>
     <div id="page">
@@ -47,3 +61,4 @@
     </div>
   </body>
 </html>
+
